--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,16 @@
 body {
-    background-color: rgba(0, 0, 255, 0.979);
-    color: white;
+    background-color: beige;
+    color: black;
 }
 
 header {
-    background-color: red;
+    background-color: rgb(0, 47, 255);
+    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 3px solid white;
-    border-radius: 4px;
+    border: 4px solid white;
+    border-radius: 6px;
     margin-bottom: 10px;
 }
 
@@ -21,7 +22,7 @@ header {
 
 }
 .JimPic img {
-    border: 5px solid red;
+    border: 4px solid white;
     border-radius: 3px;
 }
 
