--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,15 @@
 body {
-    background-color: beige;
-    color: black;
+    background-color: #0F0F2A;
+    color: white;
 }
 
 header {
-    background-color: rgb(0, 47, 255);
+    background-color: rgb(19, 19, 122);
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 4px solid white;
+    border: 4px solid black;
     border-radius: 6px;
     margin-bottom: 10px;
 }
@@ -22,10 +22,17 @@ header {
 
 }
 .JimPic img {
-    border: 4px solid white;
+    border: 4px solid black;
     border-radius: 3px;
 }
 
 .committee ol {
-    font-size: larger;
+    font-size: 16px;
+}
+.foot {
+    font-style: italic;;
+}
+
+.bio p {
+    font-size: 16px;
 }
