--- a/styles/main.css
+++ b/styles/main.css
@@ -1,38 +1,45 @@
 body {
-    background-color: #0F0F2A;
+    background-color: #24244C;
     color: white;
 }
 
 header {
-    background-color: rgb(19, 19, 122);
+    background-color: #2a42c9;
     color: white;
+    font-weight: bold;
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 4px solid black;
     border-radius: 6px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
-
-.mainContainer {
-    display: flex;
-    flex-direction: column;
-    justify-items: space-between;
-    align-items: space-between;
-
+header h1 {
+    margin-top: 9px;
+    margin-bottom: 9px;
 }
-.JimPic img {
+.bio img {
     border: 4px solid black;
     border-radius: 3px;
+    margin-top: 3px;
 }
-
-.committee ol {
+.bio h3, p{
+    margin-top: 0px;
+    margin-bottom: 3px;
+}
+.committee {
+    margin-bottom: 35px;
+}
+.committee ul {
     font-size: 16px;
 }
+
 .foot {
-    font-style: italic;;
+    font-style: italic;
 }
 
-.bio p {
-    font-size: 16px;
+.foot a {
+    color: lightgray;
 }
+   
+
